--- a/public/bbs/index.html
+++ b/public/bbs/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <html lang="en">
-  <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+  <head>
     <meta http-equiv="X-Clacks-Overhead" content="GNU Terry Pratchett" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -37,7 +37,7 @@
 
 
 
-<meta property="og:url" content="http://localhost:1313/bbs/">
+<meta property="og:url" content="https://raphelwei.netlify.app/bbs/">
   <meta property="og:site_name" content="Sihan Blog">
   <meta property="og:title" content="BBS">
   <meta property="og:description" content="我其实还蛮怕被太多不熟悉的人关注的。
